--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloudflare Pages Blog</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Blog</h1>
+        <h1>Integrarte Blog</h1>
     </header>
-    <div id="pagination"></div>
-
     <main id="posts">
         <!-- Posts will be dynamically inserted here -->
     </main>
+    <div id="pagination"></div>
     <script src="script.js"></script>
 </body>
 </html>
